# raspberry-pi-project-examples

./: .gitignore  README.md
8x8 analoge klok/: 8x8 clock.py
greenhouse/: README.md  devices.py  greenhouse.py  greenhouse.service  install.sh  names.py  properties.py  update.sh
greenhouse-webthing/: README.md  greenhouse.py  greenhouse.service  install.sh  update.sh
greenhouse-webthing/config/: config.py  greenhouse.ini  system.ini
greenhouse-webthing/devices/: ADS1015.py  SHT20.py  SHT21.py
greenhouse-webthing/properties/: greenhouse.py  raspberry.py
parkeerhulp/: README.md  parkeerhulp.py
powercontrol-thing/: README.md  devices.py  powercontrol.py  properties.py  update.sh
powercontrol-webthing/: README.md  install.sh  powercontrol.py  powercontrol.service  update.sh
powercontrol-webthing/config/: config.py  powercontrol.ini
powercontrol-webthing/devices/: MCP3425.py  TMP75.py  __init__.py
powercontrol-webthing/properties/: powercontrol.py
resistormeter/: CMakeLists.txt  XL6008calculator.html  resistormeter.c
sensorbridge-thing/: README.md  constants.py  devices.py  i2csensorbridge.py  install.sh  names.py  properties.py  sensorbridge.py  update.sh
sensorbridge-webthing/: README.md  sensorbridge.py  sensorbridge.service  update.sh
sensorbridge-webthing/config/: __init__.py  config.py  sensorbridge.ini  system.ini
sensorbridge-webthing/devices/: MCP3021.py  SensorBridge.py  TCA9534.py  devices.py
sensorbridge-webthing/properties/: __init__.py  sensorbridge.py
